@@ -1,5 +1,10 @@
 2002-12-02  James Henstridge  <james@daa.com.au>
 
+	* src/thumbnailer.c (draw_char): split code for drawing character
+	into separate function.
+	(save_pixbuf): function to save the pixbuf.  We crop the pixbuf
+	leaving PAD_PIXELS pixels round the edges.
+
 	* src/ftstream-vfs.c (FT_New_URI_Face): unset the
 	FT_FACE_FLAG_EXTERNAL_STREAM flag on the face, so that it gets
 	freed with the face.  (this is a bit of a hack ...).
